Enable preview features for Java 17 compilation